# backend2

./: .env  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: publish.yml
backend2/: main.py
backend2/auth/: auth_bearer.py  auth_handler.py
backend2/db/: database.py  schemas.py
backend2/models/: table.py
backend2/operations/: table.py
backend2/routers/: table.py  test.py
microservice/regular/helm/: Chart.yaml  values.yaml
microservice/regular/helm/templates/: deployment.yaml  ingress.yaml  service.yaml
tests/: test_basic.py
