[tool.poetry]
name = "backend2"
version = "1.0.2"
description = "This a demo project"
authors = ["sukruth grandhi <sukruthgrandhiofficial@gmail.com>"]
readme = "README.md"
packages = [{include = "backend2"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
python-decouple = "^3.8"
pyjwt = "^2.8.0"
pydantic = {extras = ["email"], version = "^2.7.1"}
sqlalchemy = "^2.0.30"
pymysql = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
